Edit repositories
